# ot_technical_exercise

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.sh  setup.sh  xml2html
data/: cd_catalog.html  cd_catalog_malformed.xml  vehicle_data.html  vehicle_data.xml
inc/: html_table_generate.hpp  key_value_data.hpp  xml_parse.hpp  xml_to_html_test.hpp
src/: html_table_generate.cpp  key_value_data.cpp  main.cpp  xml_parse.cpp  xml_to_html_test.cpp
